--- a/vcastplay-cms/src/app/pages/screen-management/screen-management-list-item/screen-management-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/screen-management/screen-management-list-item/screen-management-list-item.component.html
@@ -10,7 +10,7 @@
                         @switch (screen.type) {
                             @case('desktop') { <i class="pi pi-desktop !font-black !text-lg !text-blue-500"></i> }
                             @case('android') { <i class="pi pi-android !text-lg !text-lime-500"></i> }
-                            @default { <i class="pi pi-globe"></i> }
+                            @default { <i class="pi pi-globe !text-lg"></i> }
                         }
                     </div>
                 </div>
