--- a/vcastplay-cms/src/app/pages/screens/screen-list/screen-list.component.html
+++ b/vcastplay-cms/src/app/pages/screens/screen-list/screen-list.component.html
@@ -46,7 +46,7 @@
                                         @switch (item.type) {
                                             @case('desktop') { <i class="pi pi-desktop !font-black !text-2xl !text-blue-500"></i> }
                                             @case('android') { <i class="pi pi-android !text-2xl !text-lime-500"></i> }
-                                            @default { <i class="pi pi-globe"></i> }
+                                            @default { <i class="pi pi-globe !text-2xl"></i> }
                                         }
                                     </div>
 
