--- a/vcastplay-cms/src/app/pages/design-layout/design-layout-list/design-layout-list.component.html
+++ b/vcastplay-cms/src/app/pages/design-layout/design-layout-list/design-layout-list.component.html
@@ -1,1 +1,14 @@
-<p>design-layout-list works!</p>
+<div class="flex flex-col gap-1 h-full">
+    <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+    <p-card styleClass="h-full" class="flex-1">
+        <ng-template #title>
+            <div class="flex gap-2 items-center">
+                <app-filters class="w-full md:w-[25rem]" />
+                <div class="ml-auto">
+                    <p-button (onClick)="onClickAddNew()" label="New" icon="pi pi-plus"></p-button>
+                </div>
+            </div>
+        </ng-template>
+
+    </p-card>
+</div>
