--- a/vcastplay-cms/src/app/pages/reports/reports.component.html
+++ b/vcastplay-cms/src/app/pages/reports/reports.component.html
@@ -1,1 +1,6 @@
-<p>reports works!</p>
+<div class="flex flex-col gap-1 h-full">
+    <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
+    <p-card styleClass="h-full" class="flex-1">
+
+    </p-card>
+</div>
