--- a/vcastplay-cms/src/app/pages/screen-management/screen-management-list/screen-management-list.component.html
+++ b/vcastplay-cms/src/app/pages/screen-management/screen-management-list/screen-management-list.component.html
@@ -153,3 +153,14 @@
     <p-button pTooltip="Screenshot" tooltipPosition="bottom" icon="pi pi-camera" severity="success" size="small" />
     <p-button pTooltip="Screen Information" tooltipPosition="bottom" icon="pi pi-info-circle" severity="contrast" size="small" />
 </ng-template>
+
+<p-dialog header="Broadcast Message" [(visible)]="showBroadcast" styleClass="w-[50rem] h-auto" [modal]="true" [draggable]="false">
+    <app-screen-broadcast-message />
+    <ng-template #footer>
+        <p-button label="Close" severity="secondary" (onClick)="onClickCloseBroadcastMessage()" />
+        <p-button label="Apply" severity="success" (onClick)="onClickApplyBroadcastMessage()" />
+    </ng-template>
+</p-dialog>
+
+<p-toast />
+<p-confirmdialog />
