--- a/vcastplay-player/src/styles.scss
+++ b/vcastplay-player/src/styles.scss
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @use "tailwindcss";
 @use "primeicons/primeicons.css";
+
+.video-js {
+    width: 100vw !important;
+    height: 100vh !important;
+}
